# tcc_fp

FP/: CMakeLists.txt  main.cu
FP/src/: FPGrowth.cu  FPHeaderTable.cu  FPRadixTree.cu
FP/unit-test/: Test_FPHeaderTable.cu
fp_growth_cpu/: .gitignore  CMakeLists.txt
fp_growth_gpu/: CMakeLists.txt  main.cu
fp_growth_gpu/include/: FPHeaderTable.h  FPTransMap.h
fp_growth_gpu/src/: FPHeaderTable.cu  FPRadixTree.cu  FPTransMap.cpp
fp_growth_gpu/unit-test/: Test_FPGrowth.cpp  Test_FPHeaderTable.cu  Test_FPRadixTree.cpp  Test_FPTransMap.cu  catch.hpp
pfp-growth/: CMakeLists.txt  main.cpp  main.cu
pfp-growth/include/: FPTransMap.h  Kernel.h  PFPArray.h  PFPGrowth.cu.h  PFPGrowth.h  PFPTree.h  PFPTree.hpp  backup.txt  cudaHeaders.h  kernel_pfp.h
pfp-growth/src/: FPTransMap.cpp  Kernel.cu  PFPArray.cpp  PFPGrowth.cpp  PFPGrowth.cu  PFPTree.cpp  backup.txt  kernel_pfp.cu  pfp_tree_growth.cpp
pfp-growth/unit-test/: TestTransMap.cu  TestTree.cpp  Test_PFPGrowth.cpp  Test_PFPGrowth.cu
